fixed tags overlapping each other in suggestion box
git-svn-id: svn+ssh://rubyforge.org/var/svn/myexperiment/trunk@2378 4f7b4649-9ca9-420a-81b3-55a188e4d46f

--- a/public/stylesheets/styles.css
+++ b/public/stylesheets/styles.css
@@ -1946,6 +1946,15 @@ table.quick_add td.submit {
 	vertical-align: middle;
 }
 
+.tag_suggestion_box {
+	padding: 0.5em 0.8em;
+	border: 1px dotted #999999;
+  font-size: 93%;
+  text-align: left;
+  margin: 2em;
+  line-height: 20px;
+}
+
 .unselected_tag_suggestion {
   border: 1px SOLID white;
   padding-left: 4px;
